# agentflow

./: .agent_results.json  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: CLAUDE.md  alembic.ini  main.py  pyproject.toml
apps/api/core/: config.py  database.py  dependencies.py  rate_limiter.py  redis.py  security.py
apps/api/engine/: cost_tracker.py  executor.py  orchestrator.py  variable_resolver.py
apps/api/engine/handlers/: __init__.py  action_handler.py  ai_handler.py  base.py  human_handler.py  logic_handler.py  trigger_handler.py
apps/api/engine/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py  router.py
apps/api/migrations/: env.py
apps/api/models/: __init__.py  agent.py  base.py  execution.py  integration.py  knowledge.py  organization.py  template.py  user.py
apps/api/routers/: agents.py  analytics.py  auth.py  executions.py  integrations.py  knowledge.py  org.py  templates.py  webhooks.py
apps/api/schemas/: agent.py  auth.py  common.py  execution.py  integration.py  knowledge.py  org.py  template.py
apps/api/scripts/: seed_templates.py
apps/api/seeds/: templates.py
apps/api/services/: agent_service.py  analytics_service.py  api_key_service.py  auth_service.py  execution_service.py  integration_service.py  knowledge_service.py  org_service.py  template_service.py
apps/api/tests/: test_health.py
apps/api/workers/: agent_worker.py  celery_app.py  ingestion_worker.py  schedule_worker.py
docs/: PLAN.md  (+4 more)
(+85 files in other folders)
